# pythonProjects

./: pyproject.toml
src/: qrFactory.py  weddingQr.py
