[project]
name = "pythonProjects"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Lukasz Chmielewski", email = "lukchm94@gmail.com"},
]
dependencies = ["qrcode[pil]>=8.2", "types-qrcode>=8.2.0.20250914", "mypy>=1.18.2", "segno>=1.6.6", "pydantic>=2.12.5"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
